--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Track the history of an object.",
   "main": "index.js",
   "scripts": {
-    "test": "tape test.js && browserify test.js | jsdom-eval"
+    "test": "tape test.js | faucet && browserify test.js | ghostface | faucet"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,8 @@
   },
   "devDependencies": {
     "browserify": "^8.1.3",
+    "faucet": "0.0.1",
+    "ghostface": "^1.1.2",
     "jsdom-eval": "^0.2.5",
     "tape": "^3.5.0"
   }
